Outlining purpose of each page.

--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@ layout: default
 
 <div class="container">
   <h1>Hello, World!</h1>
+  <p class="lead">On this page: The main marketing message, explaining what BuildYourOwnCurriculum is, what it does, why it's important, and any other key points (testimonials, case studies, etc.).</p>
 </div>
