--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <div class="container">
-  <h1>Hello, World!</h1>
-  <p class="lead">On this page: The main marketing message, explaining what BuildYourOwnCurriculum is, what it does, why it's important, and any other key points (testimonials, case studies, etc.).</p>
+  <h1>Introduction</h1>
+  <p class="lead">On this page: Overview of BuildYourOwnCurriculum and BuildYourOwnCurriculum Plus explaining what it is and its benefits.</p>
 </div>
