Defining type styles.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: default
 ---
 
-<div class="container">
-  <h1>Introduction</h1>
-  <p class="lead">On this page: Overview of BuildYourOwnCurriculum and BuildYourOwnCurriculum Plus explaining what it is and its benefits.</p>
+<div class="jumbotron">
+  <div class="container">
+    <h1>Introduction</h1>
+    <p>On this page: Overview of BuildYourOwnCurriculum and BuildYourOwnCurriculum Plus explaining what it is and its benefits.</p>
+  </div>
 </div>
