Rough draft of format for home and product pages.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,52 @@ layout: default
 
 <div class="jumbotron">
   <div class="container">
-    <h1>Introduction</h1>
-    <p>On this page: Overview of BuildYourOwnCurriculum and BuildYourOwnCurriculum Plus explaining what it is and its benefits.</p>
+    <div class="row">
+      <div class="col-md-7 col-md-offset-5">
+        <h1>Introduction</h1>
+        <p>Overview of BuildYourOwnCurriculum and BuildYourOwnCurriculum Plus explaining what it is and its benefits.</p>
+        <a class="btn btn-lg btn-primary" href="{{ site.baseurl }}/webinars">Sign up for a webinar</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2>First featured cool thing</h2>
+      <p>Highlight some main features of BYOC and link to full tour.</p>
+      <a class="btn btn-lg btn-primary" href="{{ site.baseurl }}/product">Learn more</a>
+    </div>
+  </div>
+  
+  <hr>
+  
+  <div class="row">
+    <div class="col-md-12">
+      <h2>Second featured cool thing</h2>
+      <p>Talk about awards and case studies/success stories of schools using BYOC.</p>
+      <a class="btn btn-lg btn-primary" href="{{ site.baseurl }}/success-stories">Learn more</a>
+    </div>
+  </div>
+  
+  <hr>
+  
+  <div class="row">
+    <div class="col-md-12">
+      <h2>Third featured cool thing</h2>
+      <p>Introduce the story/philosophy of BYOC and link to story page</p>
+      <a class="btn btn-lg btn-primary" href="{{ site.baseurl }}/story">Learn more</a>
+    </div>
+  </div>
+  
+  <hr>
+  
+  <div class="row">
+    <div class="col-md-12">
+      <h2>Call to action</h2>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <a class="btn btn-lg btn-primary" href="{{ site.baseurl }}/story">Sign up for a webinar</a>
+    </div>
   </div>
 </div>
