--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ calltoaction: true
       <div class="col-md-7 center-block jumbotron-caption">
         <h1>Smart Curriculum Development, Management and Assessment</h1>
         <p>BuildYourOwnCurriculum (BYOC) is a web-based software helping educators to easily create, share, assess and continuously improve K-12 curriculum.</p>
-        <a class="btn btn-lg btn-primary" href="{{ site.baseurl }}/webinars">Sign up for a webinar</a>
+        <a class="btn btn-lg btn-inverse" href="{{ site.baseurl }}/webinars">Sign up for a webinar</a>
       </div>
     </div>
   </div>
