--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ calltoaction: true
 <div class="jumbotron">
   <div class="container">
     <div class="row">
-      <div class="col-md-7 center-block jumbotron-caption">
+      <div class="col-md-7 center-block jumbotron-caption fadeIn">
         <h1>Smart Curriculum Development, Management and Assessment</h1>
         <p>BuildYourOwnCurriculum (BYOC) is a web-based software helping educators to easily create, share, assess and continuously improve K-12 curriculum.</p>
         <a class="btn btn-lg btn-inverse" href="{{ site.baseurl }}/webinars">Sign up for a webinar</a>
@@ -17,7 +17,7 @@ calltoaction: true
 
 <div class="container main-content">
   <div class="row">
-    <div class="col-md-7 center-block">
+    <div class="col-md-7 center-block fadeIn">
       <h2>Less Paperwork, More Teaching.</h2>
       <p>Free yourself of weighty, stagnant curriculum planning and the bulky binders and paper that seem to pile up with it. BYOC uses technology to bring the teaching—and learning—experience into an evolving documented process that is easy to use, accessible anywhere, and aligned district-wide. With BYOC, teachers don’t have to recreate curriculum from scratch each year. By simply entering curriculum once, then continuously assessing and improving, educators can save time on curriculum management and shift focus to their true passion – teaching.</p>
       <a class="btn btn-lg btn-primary" href="{{ site.baseurl }}/product">Take a tour</a>
