Fix vertical center on intro text.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@ call-to-action: yes
 ---
 
 <div class="jumbotron">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-7 center-block jumbotron-caption fadeIn">
-        <h1>Smart Curriculum Development, Management and Assessment</h1>
-        <p>BuildYourOwnCurriculum (BYOC) is a web-based software helping educators to easily create, share, assess and continuously improve K-12 curriculum.</p>
-        <a class="btn btn-lg btn-inverse" href="{{ site.baseurl }}/webinars">Attend a Webinar</a>
-      </div>
-    </div>
+  <div class="jumbotron-caption fadeIn vertical-center">
+    <h1>Smart Curriculum Development, Management and Assessment</h1>
+    <p>BuildYourOwnCurriculum (BYOC) is a web-based software helping educators to easily create, share, assess and continuously improve K-12 curriculum.</p>
+    <a class="btn btn-lg btn-inverse" href="{{ site.baseurl }}/webinars">Attend a Webinar</a>
   </div>
 </div>
 
