Adding intro graphic.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 call-to-action: yes
 ---
 
-<div class="jumbotron">
+<div class="jumbotron jumbotron-1">
   <div class="jumbotron-caption fadeIn vertical-center">
     <h1>Smart Curriculum Development, Management and Assessment</h1>
     <p>BuildYourOwnCurriculum (BYOC) is a web-based software helping educators to easily create, share, assess and continuously improve K-12 curriculum.</p>
